force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/Asf_Dynamic_Datatable_Parent__mdt.object-meta.xml
<CustomObject>
    <label>Asf_Dynamic Datatable Parent</label>
    <pluralLabel>Asf_Dynamic Datatable Parents</pluralLabel>
</CustomObject>