force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/fields/Cache_Time__c.field-meta.xml
<CustomField>
    <fullName>Cache_Time__c</fullName>
    <label>Cache Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>