force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/fields/DMS_Case_SOQL_Fields__c.field-meta.xml
<CustomField>
    <fullName>DMS_Case_SOQL_Fields__c</fullName>
    <description>This field set is specific to DMS and is used to dynamically create SOQL queries from fields in apex to query the case records.</description>
    <label>DMS Case SOQL Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>