force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/fields/DMS_Files_SOQL_Fields__c.field-meta.xml
<CustomField>
    <fullName>DMS_Files_SOQL_Fields__c</fullName>
    <inlineHelpText>This field set is specific to DMS and is used to dynamically create SOQL queries from fields in apex to query the DMS Files records.</inlineHelpText>
    <label>DMS Files SOQL Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>