force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/fields/DMS_Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>DMS_Retry_Interval__c</fullName>
    <label>DMS Retry Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>