force-app/main/default/objects/Asf_Dynamic_Datatable_Parent__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>